--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,36 @@
 {
-  "name": "rocketeers/rocketeer-plugin",
-  "description": "The description of the plugin",
-  "license": "MIT",
-  "keywords": [
-    "rocketeer"
-  ],
-  "authors": [
-    {
-      "name": "Maxime Fabre",
-      "email": "ehtnam6@gmail.com"
-    }
-  ],
-  "require": {
-    "php": ">=5.4.0",
-    "anahkiasen/rocketeer": "3.0.*@dev"
-  },
+    "name": "hod/rocketeer-newrelic",
+    "description": "Newrelic notification plugin for rocketeer",
+    "license": "MIT",
+    "keywords": [
+        "rocketeer",
+        "newrelic"
+    ],
+    "authors": [
+        {
+            "name": "Matthew Wheeler",
+            "email": "matt@yurisko.net"
+        }
+    ],
+    "require": {
+        "php": ">=5.4.0",
+        "anahkiasen/rocketeer": "3.0.*@dev",
+        "guzzlehttp/guzzle": "6.0.*"
+    },
 
-  "require-dev": {
-    "phpunit/phpunit": "~4.4",
-    "mockery/mockery": "0.9.*"
-  },
-  "autoload": {
-    "psr-4": {
-      "Rocketeer\\Plugins\\Acme\\": "src/Acme"
+    "require-dev": {
+        "phpunit/phpunit": "~4.4",
+        "mockery/mockery": "0.9.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Rocketeer\\Plugins\\Newrelic\\": "src/Newrelic"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Rocketeer\\Plugins\\Acme\\": "tests",
+            "Rocketeer\\": "vendor/anahkiasen/rocketeer/tests"
+        }
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Rocketeer\\Plugins\\Acme\\": "tests",
-      "Rocketeer\\": "vendor/anahkiasen/rocketeer/tests"
-    }
-  },
 }
