--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "anahkiasen/rocketeer": "3.0.*@dev",
+        "anahkiasen/rocketeer": "^2.2",
         "guzzlehttp/guzzle": "6.0.*"
     },
 
