Add compatibility upgrades for proper functional plugins

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": ">=5.4.0",
         "anahkiasen/rocketeer": "^2.2",
+        "illuminate/support": "~4.2",
         "guzzlehttp/guzzle": "6.0.*"
     },
 
